# FALL23-CS5330

./: .gitignore  README.md  matrix convolution
playground/: CMakeLists.txt  helloworld  in-class-i4.cpp  in-class-i4.py  in-class-l3.cpp  out
playground/helloworld.dSYM/Contents/Resources/DWARF/: helloworld
project-1/: .gitignore  CMakeLists.txt  Makefile  filterMatrices.h  filters.cpp  filters.h  filters_sept_18.h  graveYard.h  imgDisplay.cpp  makefile.py  project1-danielbi-imgDisplay  project1-report-danielbi.md  readMe.md  test.py  util.h  vidDisplay.cpp
project-2/: .gitignore  CMakeLists.txt  project1-danielbi-baseline-matching  project1-danielbi-find-images  project2.md  project2_changeLog.md  readMe.md
project-2/src/: findImages.cpp
project-2/src/features/: baseline_matching.cpp  custom1.cpp  custom2.cpp  custom3_roads.cpp  feature.cpp  feature.h  histogram_matching.cpp  multiHistMatching.cpp  multiHistTextureMatch.cpp
project-2/src/util/: readfiles.cpp
project-3/: project3.md  readMe.md
project-3/ObjectDetect/: .gitignore  Podfile
project-3/ObjectDetect/ObjectDetect/: Info.plist  ObjectDetectApp.swift
project-3/ObjectDetect/ObjectDetect.xcodeproj/: project.pbxproj
project-3/ObjectDetect/ObjectDetect.xcodeproj/project.xcworkspace/xcuserdata/danielbi.xcuserdatad/: UserInterfaceState.xcuserstate
project-3/ObjectDetect/ObjectDetect.xcodeproj/xcuserdata/danielbi.xcuserdatad/xcschemes/: xcschememanagement.plist
project-3/ObjectDetect/ObjectDetect/Model/: CSVProcess.swift  Camera.swift  DataModel.swift  modelFeatures.csv
project-3/ObjectDetect/ObjectDetect/UI/: ContentView.swift
project-3/ObjectDetect/ObjectDetect/UI/LearningModeView/: CapturedImageView.swift  LearningModeCaptureView.swift  LearningModeView.swift
project-3/ObjectDetect/ObjectDetect/UI/MainCameraView/: CameraView.swift  ViewFinderView.swift
project-3/ObjectDetect/ObjectDetect/UI/UtilVIew/: ButtonObjectVIew.swift  HomeworkDemoView.swift  VersionView.swift
project-3/ObjectDetect/ObjectDetect/openCV/: ObjectDetect-Bridging-Header.h  OpenCVWrapper.h  OpenCVWrapper.mm
project-4/: CMakeLists.txt  project3.md  project4.md  project4_changeLog.md  readMe.md
project-4/src/: augmentedRealityDemo.cpp  harrisCorner.cpp
project-5/: hw5_part1.py  hw5_part1e_showFig.py  hw5_part1f.py  hw5_part2.py  hw5_part3.py  hw5_part4.py  project5.md  readMe.md
project-5/notebooks/: hw1_part1.ipynb  hw5_part1e.ipynb  hw5_part1f.ipynb  hw5_part2.ipynb  hw5_part3.ipynb  hw5_part4.ipynb  hw5_part4a.ipynb
